deploy/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assets-api
  labels:
    app: assets-api
spec:
  selector:
    app: assets-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
